@@ -2,8 +2,8 @@
 ## 
 ## $Id$
 
-AC_PREREQ(2.52)
-AC_INIT([rtems-c-src-librtems++],[_RTEMS_VERSION],[rtems-bugs@OARcorp.com])
+AC_PREREQ(2.57)
+AC_INIT([rtems-c-src-librtems++],[_RTEMS_VERSION],[rtems-bugs@OARcorp.com],[rtems-c-src-librtems++])
 AC_CONFIG_SRCDIR([include/rtems++])
 RTEMS_TOP(../../..)
 AC_CONFIG_AUX_DIR(../../..)
@@ -11,14 +11,13 @@ AC_CONFIG_AUX_DIR(../../..)
 RTEMS_CANONICAL_TARGET_CPU
 RTEMS_CANONICAL_HOST
 
-AM_INIT_AUTOMAKE([no-define foreign 1.6])
+AM_INIT_AUTOMAKE([no-define foreign 1.7.2])
 AM_MAINTAINER_MODE
 
 RTEMS_ENABLE_CXX
 
 RTEMS_ENV_RTEMSBSP
 RTEMS_CHECK_CPU
-RTEMS_CHECK_CUSTOM_BSP(RTEMS_BSP)
 
 RTEMS_CHECK_CXX(RTEMS_BSP)
 ## check for g++
