@@ -1,3 +1,10 @@
+2002-12-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* Makefile.am: Eliminate *_O_FILES.
+	Use install-data-local instead of bsplist_DATA.
+	* configure.ac: Require autoconf-2.57/automake-1.7.2.
+	Apply 4th arg to AC_INIT to prevent autoconf to corrupt package name.
+
 2002-12-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* src/Makefile.am: Remove.
